--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ matplotlib==3.7.1
 numpy==1.24.3
 pandas==2.0.2
 scikit_learn==1.3.0
-itertools
-tabulate
+scipy==1.11.1
+tabulate==0.8.10
+tqdm==4.65.0
